--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -1,18 +1,22 @@
 @import "../../global";
-.animated-div{
+
+.animated-div {
   display: grid;
   align-items: center;
   justify-items: center;
-  h1{
+
+  h1 {
     color: $complementary;
     opacity: 0.8;
     text-align: center;
- margin-bottom: 1rem;
+    margin-bottom: 1rem;
   }
-  .message{
-    &:hover{
+
+  .message {
+    &:hover {
       cursor: pointer;
     }
+
     color: $secondary;
     background-color: white;
     opacity: 0.3;
@@ -20,88 +24,128 @@
     text-align: center;
     margin-bottom: 1.5rem;
   }
-.login__input-wrapper{
-  width: min(400px, 85vw);
-  //height: min(300px, 90vh);
-padding: 1.5rem 1rem;
-  box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
-  background: $primary;
-  opacity: 0.8;
-  color: #000;
-  border-radius: 10px;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  @include mobile{
-   margin: 0 0.7rem;
-  }
-  .login__input-container{
-    display:flex;
+  .login__input-wrapper {
+    width: min(400px, 85vw);
+    //height: min(300px, 90vh);
+    padding: 1.5rem 1rem;
+    box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
+    background: #e6e6e6;
+
+    color: #000;
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0.5rem 1rem;
-    svg{
-      background-color: $complementary;
-      opacity: 0.5;
-      padding: 0.5rem;
-      color:$primary;
+    position: relative;
+    z-index: 10;
+    @include mobile {
+      margin: 0 0.7rem;
     }
-  }
-  .login__forgoten-psw{
-    color: $tertiary;
-    cursor: pointer;
-    font-size: 0.8rem;
-    &:hover{
-      font-weight: 500;
+
+    .login__input-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0.5rem 1rem;
+
+      svg {
+        background-color: $complementary;
+        opacity: 0.5;
+        padding: 0.5rem;
+        color: $primary;
+      }
     }
-    &:disabled{
-      cursor: not-allowed;
+
+    .login__forgoten-psw {
+      color: $tertiary;
+      cursor: pointer;
+      font-size: 0.8rem;
+
+      &:hover {
+        font-weight: 500;
+      }
+
+      &:disabled {
+        cursor: not-allowed;
+      }
+
+      span {
+        text-decoration: underline;
+      }
     }
-    span{
-      text-decoration: underline;
+
+    .login__btn-submit {
+      border: 1px solid #2f2f2f;
+      margin: 1rem auto;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+      font-size: 1.2rem;
+      transition: background-color 0.7s ease;
+      min-width: 90px;
+      min-height: 40px;
+
+      &:disabled {
+        cursor: not-allowed;
+      }
+
+      &:hover {
+        background-color: $complementary;
+        color: $primary;
+
+      }
     }
-  }
-  .login__btn-submit{
-    border: 1px solid #2f2f2f;
-    margin: 1rem auto ;
-    padding: 0.5rem 1rem ;
-    cursor: pointer;
-    font-size: 1.2rem;
-    transition: background-color 0.7s ease;
-    min-width: 90px;
-    min-height: 40px;
-    &:disabled{
-      cursor: not-allowed;
-    }
-    &:hover{
-      background-color: $complementary;
-      color: $primary;
+
+    .login__message--error {
+      font-size: 0.9rem;
+      color: $delete;
 
     }
   }
-  .login__message--error{
-    font-size: 0.9rem;
-    color: $delete;
 
-  }
-}
-  .login__btn-switch{
+  .login__btn-switch {
     width: 80%;
-    margin:0.2rem 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.9)) ;   margin: auto;
-    padding: 1rem ;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 1));
+    margin: 0 auto;
+    padding: 1rem;
     text-align: center;
     border-radius: 0 0 10px 10px;
     color: $secondary;
+    font-weight: 400;
     cursor: pointer;
-    &:disabled{
+    z-index: 9;
+    animation-delay: 0s;
+    animation-duration: 1s;
+    animation-name: slideDown;
+
+    span {
+      font-weight: 800;
+      color: $validate;
+    }
+
+
+    &:disabled {
       cursor: not-allowed;
     }
   }
 }
 
-.d-none{
-  display: none!important;
+.d-none {
+  display: none !important;
+}
+
+@keyframes slideDown {
+  from {
+    margin-top: -26%;
+    opacity: 0
+
+  }
+
+  to {
+    margin-top: 0%;
+    opacity: 1;
+
+  }
 }
