--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -27,9 +27,9 @@
       h2 {
         letter-spacing: 2px;
         word-spacing: 0.5rem;
-
         font-family: "Inconsolata", monospace;
         text-shadow: -2px -2px white;
+        text-align: center;
       }
     }
 
