--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -89,6 +89,7 @@
         }
       }
       .modal__report {
+        cursor: pointer;
         position: absolute;
         bottom: 0;
         right: 0;
@@ -128,7 +129,7 @@
             width: 0;
             height: 0;
             border-radius: 10%;
-            background-color: $primary;
+            background-color: #ffcfcf;
             z-index: 4;
             position: absolute;
             transition: all 0.6s ease-in;
