input read by tag, css modal modifications, autosearchbar custom

--- a/src/components/account/accountContent/accountcontent.scss
+++ b/src/components/account/accountContent/accountcontent.scss
@@ -103,7 +103,7 @@
     background-color: rgba(0, 128, 0, 1);
     padding: 0.7rem;
     border-radius: 20px;
-    right: 50vw;
+    //right: 50vw;
     z-index: 10;
     opacity: 1;
     transform: translateX(50%);
