--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  position: relative;
 
   .intro__welcome {
     margin-top: 9rem;
@@ -53,6 +54,77 @@
       }
       @include mobile {
         font-size: 1.7rem;
+      }
+    }
+  }
+  .intro__writePostBtnWrapper{
+    z-index: 10;
+    position: fixed !important;
+    bottom: 8vh;
+    background-color: white !important;
+    border-radius: 17% !important;
+    color: black !important;
+    right: 45px;
+    cursor: pointer;
+    .writePostBtn{
+      color: black;
+      border: 1px solid black;
+      &:hover{
+        background-color: $secondary!important;
+        border: 1px solid white!important;
+
+        color: white!important;
+
+
+      }
+    }
+  }
+  @include mobile{
+    &::before{
+      content: "";
+      position: absolute;
+      top:30px;
+      left:25px;
+      height: 30px;
+      width: 30px;
+      background-image:url('../../../public/assets/icon-blue-48.png');
+      background-size:contain;
+      background-repeat: no-repeat;
+      animation: opacity 2s 2.5s linear forwards;
+      opacity: 0;
+      z-index: 10;
+    }
+    &::after{
+      content: "";
+      position: absolute;
+      top:-155px;
+      left:-155px;
+      height: 150px;
+      width: 150px;
+      border-radius: 50%;
+      background-image:url('../../../public/assets/earthmap.png');
+      background-size:cover;
+      border:1px solid #64c7cb;
+      animation: earthmoves 7s linear 0s infinite ,appears 2s linear forwards;
+      box-shadow:0 0 25px RGBA(255,255,255, 0.10),
+      -8px -8px 15px rgba(100, 199, 203, 0.56) inset,
+      2px 2px 25px rgba(100, 199, 203, 0.18) inset,
+      -45px -45px 25px rgba(100, 199, 203, 0.13) inset,
+      25px 25px 45px rgba(100, 199, 203, 0.6) inset;
+
+    }
+    @keyframes earthmoves {
+      0% { background-position:0 0 }
+      100% { background-position:267px 0 }
+    }
+    @keyframes appears {
+      to{
+        transform: rotate(10deg) translate(110px ,90px);
+      }
+    }
+    @keyframes opacity {
+      to{
+        opacity: 1;
       }
     }
   }
