--- a/src/components/menuItem/menuitem.scss
+++ b/src/components/menuItem/menuitem.scss
@@ -28,7 +28,7 @@
     width: 100%;
     justify-content: center;
 
-    menu__item--title {
+    .menu__item--title {
       color: inherit;
       text-decoration: none;
       width: calc(100% - 20px);
@@ -72,8 +72,7 @@
     border-radius: 0 0 20px 20px;
     border: 1px solid $primary;
     opacity: 0;
-    &.menu-how {
-    }
+
     &.menu-read {
       li {
         width: 80%;
@@ -233,8 +232,13 @@
       left: 0;
       background-color: $primary;
       z-index: 10;
+      @include pad {
+        bottom: -3px;
+      }
     }
-
+    @include pad{
+      height: 66px;
+    }
     @include mobile {
       border-radius: 20px;
       height: auto;
@@ -243,10 +247,14 @@
       }
     }
 
+
     .menu__item-wrapper {
       .menu__item--seeMore {
         border-color: $complementary;
         content: "-";
+      }
+      @include mobile{
+        width: 100%;
       }
     }
     ul {
@@ -259,7 +267,6 @@
       border: 1px solid $complementary;
       border-top-right-radius: 20px;
       padding: 1rem;
-
       z-index: 10;
       &.menu-how,
       &.menu-fav {
@@ -269,23 +276,35 @@
           left: unset;
         }
       }
-
       &.menu-addYours {
         border-radius: 20px 0 20px 20px;
         right: -1px;
         left: unset;
       }
-
       li {
         &:hover {
           //font-weight: bold;
         }
       }
+      @include pad {
+        transform: translateY(101%);
+      }
       @include mobile {
         border: none;
         transform: none;
+        margin: auto;
+        max-width: 250px;
       }
+
     }
+  }
+  @include pad{
+    font-size:13px;
+    height: 66px;
+  }
+  @include mobile{
+    height: unset;
+    marin: 10px
   }
 }
 .menu__item:nth-child(1) {
@@ -320,6 +339,10 @@ min-height: 36px;
         right: 4px;
         width: 13px;
       }
+      @include mobile{
+        font-size: 13px;
+        height: 22px;
+      }
     }
   }
   .message {
@@ -343,7 +366,7 @@ min-height: 36px;
   }
   @include pad {
     margin-left: 1rem;
-    margin-bottom: 1rem;
+    //margin-bottom: 1rem;
   }
   @include mobile {
     max-width: unset;
