--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -42,36 +42,18 @@
   display: grid;
   align-items: center;
   justify-items: center;
+  position: relative;
+  .modal__WritePostBtnContainer{
+    position: absolute;
+    width: min(800px,90%);
+    display: flex;
+    justify-content: right;
+    bottom: -3rem;
 
+
+  }
   .modal-wrapper {
-    .icon3 {
-      transition: all 0.3s ease;
-      &.false {
-        .icon--tocome {
-          display: none;
-        }
-      }
-      &.expand {
-        width: 7rem;
-        //height: 3rem;
-        background-color: white;
-        border: 1px solid $complementary;
-        text-align: center;
-        border-radius: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
 
-        padding: 1rem;
-        svg {
-          display: none;
-        }
-      }
-      .icon--tocome {
-        display: flex;
-        color: $complementary;
-      }
-    }
 
     .modal-content {
       //scrollbar-width: none;
@@ -83,94 +65,133 @@
         background-color: rgba(0, 0, 0, 0.1);
         width: max-content;
         padding: 0.2rem 0.5rem;
+        margin-left: 1rem;
         svg {
           margin-right: 0.5rem;
           margin-top: 0;
         }
       }
-      .modal__report {
-        cursor: pointer;
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        //background-color: lightgrey;
-        height: 80px;
-        width: 80px;
+      .modal__bottom{
         display: flex;
-        justify-content: end;
+        justify-content: space-between;
         align-items: end;
-        overflow: hidden;
-        opacity: 0;
-        transition: opacity 0.2s ease-in;
-        &.visible {
-          opacity: 1;
-        }
-        .modal__report-wrapper {
-          position: absolute;
-          background-color: $shadow;
-          border: 1px solid $tertiary;
-          box-shadow: $box-shadow;
-          height: 150px;
-          width: 150px;
-          transform: translate(75px, 75px);
-
-          border-radius: 50%;
-          z-index: 2;
-          transition: border 1.1s 0.7s ease-in;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          animation: move 1s cubic-bezier(.1,.08,.61,1.3);
-          @keyframes move {
-          from{ transform: translate(150px, 150px);}
-          to{transform: translate(75px, 75px);}
-          }
-          .active-fill {
-            width: 0;
-            height: 0;
-            border-radius: 10%;
-            background-color: #ffcfcf;
-            z-index: 4;
-            position: absolute;
-            transition: all 0.6s ease-in;
-
-          }
-          svg {
-            fill: $secondary;
-            z-index: 5;
-            transform: translate(-30px, -30px);
-            transition: fill 0.5s 0.1s ease-in;
-          }
-
-          &.active {
-            border: 1px solid $delete;
-            .active-fill {
-              transform: rotate(360deg);
-              width: 100%;
-              height: 100%;
-              border-radius: 50%;
-
+        overflow-x: clip;
+        width: 100%;
+        .iconComm {
+          transition: all 0.3s ease;
+          z-index: 10;
+          &.false {
+            .icon--tocome {
+              display: none;
             }
+          }
+          &.expand {
+            width: 7rem;
+            background-color: white;
+            border: 1px solid #2f2f2f;
+            text-align: center;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 1rem;
+            transform-origin: center;
+            transform: translate(-113px,14px);
             svg {
-              fill: $delete;
+              display: none;
             }
+          }
+          .icon--tocome {
+            display: flex;
+            color: $complementary;
           }
         }
       }
+      .iconsLeft{
+        position: relative;
+        display: flex;
+        align-items: end;
+        justify-content: center;
+
+
+        .modal__report-wrapper {
+          min-height: 50px;
+          min-width: 50px;
+          justify-content: center;
+          display: flex;
+          align-items: end;
+          padding: 0 0  1rem 0;
+          cursor: pointer;
+
+          svg {
+            fill: #b6b8de;;
+            z-index: 5;
+            transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+            position: absolute;
+            left: 11px;
+            bottom: 1.2rem;
+          }
+          .modal__reported{
+            display: block;
+            width: 0;
+            height: 0;
+            transition: all 0.3s  ease-in;
+            cursor: pointer;
+            z-index: 10;
+            transform: translateY(-55px);;
+            span{
+              opacity: 0;
+              color: $delete;
+            }
+          }
+        &.reported{
+          .modal__reported{
+            width: 7rem;
+            height: 1.7rem;
+            border: 1px solid $delete;
+            text-align: center;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 1rem;
+            transform-origin: center;
+            transform: translate(3px, 14px);
+            //position: absolute;
+           span{
+              display: block;
+              animation: opacityOn 0.5s 0.2s  forwards;
+              margin-left: 1rem;
+              @keyframes opacityOn {
+              to{
+                opacity: 1;
+               }
+              }
+            }
+          }
+          svg{
+            fill:$delete;
+            transform: rotate(90deg);
+          }
+        }
+        }
+
+      }
+
       .modal__button-wrapper {
-        padding-bottom: 1rem;
+        padding-bottom: 0;
         height: 50px;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
       }
 
       @include mobile {
         margin-top: 0;
         h1 {
-          margin: 0;
+          margin: 0 0 0.2rem 0;
           color: $complementary;
         }
+
       }
     }
     .modal-content::-webkit-scrollbar {
@@ -195,4 +216,5 @@
       }
     }
   }
+
 }
