--- a/src/components/scroll/scroll.scss
+++ b/src/components/scroll/scroll.scss
@@ -1,14 +1,14 @@
 @import "../../global.scss";
 
 .toTop{
-z-index:10;
-position :fixed !important;
-bottom:10vh;
-background-color: white!important;
-    border-radius: 50%!important;
+    z-index: 10;
+    position: fixed !important;
+    bottom: 15vh;
+    background-color: white !important;
+    border-radius: 50% !important;
     border: 1px solid black !important;
-color: black !important;
-right:5%;
+    color: black !important;
+    right: 34px;
     cursor: pointer;
     &:hover{
         background-color: $secondary!important;
