--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -87,7 +87,7 @@
       left:25px;
       height: 30px;
       width: 30px;
-      background-image:url('../../../public/assets/icon-blue-48.png');
+      background-image:url('https://api.yworld3.com/storage/app/public/icon-blue-48.png');
       background-size:contain;
       background-repeat: no-repeat;
       animation: opacity 2s 2.5s linear forwards;
@@ -102,10 +102,10 @@
       height: 150px;
       width: 150px;
       border-radius: 50%;
-      background-image:url('../../../public/assets/earthmap.png');
+      background-image:url('https://api.yworld3.com/storage/app/public/earthmap.png');
       background-size:cover;
       border:1px solid #64c7cb;
-      animation: earthmoves 7s linear 0s infinite ,appears 2s linear forwards;
+      animation: earthmoves 4s linear 0s infinite ,appears 2s linear forwards;
       box-shadow:0 0 25px RGBA(255,255,255, 0.10),
       -8px -8px 15px rgba(100, 199, 203, 0.56) inset,
       2px 2px 25px rgba(100, 199, 203, 0.18) inset,
