auth height for landscape smartphone, scroll and writepost btn position for all screen (landscape smartphone issue solved)

--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -4,6 +4,9 @@
   display: grid;
   align-items: center;
   justify-items: center;
+  max-height: 95vh;
+  overflow-y: scroll;
+  scrollbar-width: none
 
   h1 {
     color: $complementary;
