--- a/src/components/scroll/scroll.scss
+++ b/src/components/scroll/scroll.scss
@@ -3,7 +3,7 @@
 .toTop{
     z-index: 10;
     position: fixed !important;
-    bottom: 15vh;
+    bottom: calc(70px + 5vh);
     background-color: white !important;
     border-radius: 50% !important;
     border: 1px solid black !important;
