--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,4 +1,5 @@
 @import "../../global";
+
 .lds-ring {
   display: inline-block;
   position: relative;
@@ -38,23 +39,25 @@
     transform: rotate(360deg);
   }
 }
-.animated-div {
+.animated-div.modal {
   display: grid;
   align-items: center;
   justify-items: center;
   position: relative;
-  .modal__WritePostBtnContainer{
+  height: 100%;
+  max-height: 100vh;
+  overflow-y: hidden;
+
+  .modal-wrapper {
+    .modal__WritePostBtnContainer{
     position: absolute;
     width: min(800px,90%);
     display: flex;
     justify-content: right;
     bottom: -3rem;
-
+    right:0;
 
   }
-  .modal-wrapper {
-
-
     .modal-content {
       //scrollbar-width: none;
       //scrollbar-color: #fff0 #fff0;
